<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8A5D0"
    android:contentDescription="@string/txtMyProfilTitle"
    tools:context=".IAmActivity">

    <TextView
        android:id="@+id/txtSexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txtMyProfilQ1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rgSexe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rgSexe"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/rgSexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="@+id/txtMyProfil"
        app:layout_constraintStart_toStartOf="@+id/txtMyProfil"
        app:layout_constraintTop_toBottomOf="@+id/txtMyProfil">

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/rbWoman"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/rbMan"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:minHeight="48dp"
            android:text="@string/rbOther"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@id/txtAge"
        android:text="@string/txtMyProfilQ2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rgAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rgAge"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/rgAge"
        android:layout_width="150dp"
        android:layout_height="152dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/rgSexe"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/rgSexe"
        app:layout_constraintTop_toBottomOf="@+id/rgSexe">

        <RadioButton
            android:id="@+id/rbUnder40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/rbUnder40"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbBetween40and60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/rbBetween40and60"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbOver60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/rbOver60"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/btnPrevIAm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/btnPrec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNextIAm"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtMyProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtMyProfilTitle"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/myProfilImg"
        app:layout_constraintStart_toStartOf="@+id/myProfilImg"
        app:layout_constraintTop_toBottomOf="@+id/myProfilImg"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/myProfilImg"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/txtMyProfilTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profill"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnNextIAm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgAge"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>