<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NameActivity">

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/txtMainTitle"
        android:textAlignment="center"
        android:textColor="#F8ECEC"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#000000"
        android:text="@string/btnStartTest"
        android:textColor="#FBF4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMainSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtMain"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvMainTitle"
        app:layout_constraintStart_toStartOf="@+id/tvMainTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvMainTitle"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtMainYourName"
        app:layout_constraintBottom_toTopOf="@+id/btnStartTest"
        app:layout_constraintEnd_toEndOf="@+id/tvMainSubtitle"
        app:layout_constraintStart_toStartOf="@+id/tvMainSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/tvMainSubtitle"
        app:helperText="@string/txtRequired"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/design_default_color_error"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtiputeditName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="20"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>